non-msrv-tests/tests/ui/item_option_syntax.stderr
error: unexpected option syntax
 --> tests/ui/item_option_syntax.rs:2:3
  |
2 | #[derive_where]
  |   ^^^^^^^^^^^^

error: unexpected option syntax
 --> tests/ui/item_option_syntax.rs:6:16
  |
6 | #[derive_where(Debug = "option"; T)]
  |                ^^^^^^^^^^^^^^^^
